--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Kantumruy Pro', sans-serif;
+    margin: 0px;
 
 }
 
@@ -21,19 +22,45 @@ section {
 
 .fist-half {
     width: 50%;
-    padding-left: 5%;
-    margin: 10px;
-    margin-bottom: 20px;
+    margin: 20ps;
+    margin-left: 20px;
+    padding-left: 15%;
+    padding: 5px;
 }
 
 .img-1 {
-    width: 80%;
+    width: 70%;
+    padding-top: 20px;
 }
 
 .link {
     text-decoration: none;
     background-image: radial-gradient(tomato, orange);
     color: white;
+    padding: 8px 12px;
+    font-weight: 700px;
+    border-radius: 7px;
+}
+
+.top-banner {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+
+.img-2 {
+    width: 65%;
+    padding-left: 45px;
+}
+
+.width {
+    width: 50%;
+    padding-right: 5%;
+}
+
+.second-links {
+    text-decoration: none;
+    background-image: radial-gradient(BurlyWood, AntiqueWhite);
+    color: black;
     padding: 8px 12px;
     font-weight: 700px;
     border-radius: 7px;
