--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ h1 {
     color: orange;
 }
 
-section {
+.flex-desing {
     display: flex;
-    margin-bottom: 130px;
+    margin-bottom: 30px;
 }
 
 .fist-half {
@@ -73,4 +73,35 @@ section {
     background-position: right;
     background-size: 90px;
 
+}
+
+.learner {
+    width: 50%;
+    height: 80%;
+    margin-left: 6%;
+    padding: 25px;
+    box-shadow: 10px 15px 15px gray;
+    border-radius: 12px;
+    border-left: 10px solid orange;
+}
+
+.learner-1 {
+    width: 50%;
+    margin-left: 7%;
+    margin-right: 4%;
+    padding: 25px;
+    box-shadow: 10px 15px 15px gray;
+    border-radius: 12px;
+    border-left: 10px solid blue;
+}
+
+.last-design {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+footer {
+    text-align: center;
+    padding-top: 5%;
 }
